--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "immer": "^3.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
