--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "immer": "^3.2.0",
     "materialize-css": "^1.0.0-rc.2",
@@ -14,6 +15,8 @@
     "react-dnd-html5-backend": "^9.3.2",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
   },
