--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.3.1",
     "immer": "^3.2.0",
     "materialize-css": "^1.0.0-rc.2",
+    "polished": "^3.4.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dnd": "^9.3.2",
