--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "date-fns": "^2.0.0-beta.5",
     "immer": "^3.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "polished": "^3.4.2",
