#FRONT - junção com o site do pedro

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "json-server": "0.13.0"
+    "json-server": "0.13.0",
+    "yarn": "^1.19.1"
   },
   "scripts": {
-    "start": "json-server --watch ./giovanni.vecchi/db.json --port 3001 "
+    "start": "json-server --watch ./giovanni.vecchi/db.json --port 5000 "
   }
 }
